<resources>
    <string name="app_name" translatable="false">ClimbApp</string>
    <string name="settings">Settings</string>

    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYmV1dGgtc3R1ZGVudCIsImEiOiJjazJkazBvanowM2JoM25ydWF5bGQ1bHRnIn0.7ZceALC-VxdQcUCZmU-iRA</string>
    <string name="request_starting">Starte Overpass Abfrage…</string>
    <string name="request_found_elements">%1$d Spots gefunden, %2$d gefiltert!</string>

    <string name="internet_disabled_map">Diese App benötigt Internetzugriff für die Darstellung der Karte</string>
    <string name="internet_disabled_overpass">Diese App benötigt Internetzugriff für Overpass-Abfragen</string>

    <string name="gps_disabled">Dein Standortzugriff ist deaktiviert. Bitte prüfe deine Einstellungen!</string>
    <string name="gps_no_position">Es konnte keine Position ermittelt werden.</string>
    <string name="center">Zentrieren</string>

    <string name="already_running_request">Es läuft gerade bereits eine Abfrage!</string>
    <string name="overpass_error">Die Overpass Antwort war fehlerhaft</string>
    <string name="overpass_timeout">Overpass antwortet nicht auf deine Anfrage. Du kannst den Overpass-Server in den Einstellungen ändern, wenn das Problem fortbesteht.</string>

    <string name="permission_request">ClimpApp benötigt Zugriff auf deinen Standort</string>
    <string name="permission_request_accept">Erteilen</string>
    <string name="permissions_granted">Berechtigung wurde gewährt</string>

    <string name="osm_attribution">© OpenStreetMap-Mitwirkende</string>

    <string name="search_prompt">Punkt lange drücken um eine Suche zu starten!</string>

    <string name="title_activity_settings">Einstellungen</string>


    <string name="default_overpass_mirror" translatable="false">https://overpass.openstreetmap.fr/api/interpreter</string>

    <!-- Preference Titles -->
    <string name="settings_header_filter">Filter</string>
    <string name="settings_header_search">Suche</string>
    <string name="settings_header_other">Sonstiges</string>

    <string name="settings_radius_h">Radius</string>
    <string name="settings_radius_i">Stelle den Suchradius ein (km)</string>

    <string name="settings_filter_h">Filter deaktieren</string>
    <string name="settings_filter_i_on">Alle Filter werden ignoriert</string>
    <string name="settings_filter_i_off">Folgende Filter werden verwendet</string>

    <string name="settings_filter_indoor_h">Indoor</string>
    <string name="settings_filter_indoor_i_on">Zeigt Indoor-Kletterspots an</string>
    <string name="settings_filter_indoor_i_off">Indoor-Kletterspots werden gefiltert</string>

    <string name="settings_filter_outdoor_h">Outdoor</string>
    <string name="settings_filter_outdoor_i_on">Zeigt Outdoor-Kletterspots an</string>
    <string name="settings_filter_outdoor_i_off">Outdoor-Kletterspots werden gefiltert</string>

    <string name="settings_filter_fee_h">Nicht kostenlose Spots</string>
    <string name="settings_filter_fee_i_on">Zeigt auch nicht kostenlose Kletterspots an</string>
    <string name="settings_filter_fee_i_off">Zeigt nur kostenlose Kletterspots an</string>

    <string name="settings_other_debug_h">Debug</string>
    <string name="settings_other_debug_on">Zeigt Debug-Meldungen an</string>
    <string name="settings_other_debug_off">Zeigt keine Debug-Meldungen an</string>


    <string name="element_no_name_boulder">Unbekannter Kletterfelsen</string>
    <string name="element_no_name_center">Unbekannte Kletterhalle</string>

    <string name="dialog_rock">Felsen: %1$s</string>
    <string name="dialog_length">Länge: %1$d m</string>
    <string name="dialog_elevation">Höhe: %1$.2f m</string>

    <string name="dialog_no_access">Kein Zugang!</string>
    <string name="dialog_no_fee">Zugang ist kostenlos</string>
    <string name="dialog_has_fee">Zugang ist kostenpflichtig</string>

    <string name="dialog_no_info">Keine Informationen gefunden!</string>
    <string name="dialog_climbing_styles">Kletterstile:</string>

</resources>